Prepare handling history data for a player
+ start batch processing for ranking files
+ store history for a player
+ create EclipseStore repos